--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -11,6 +11,12 @@
   </head>
   <body>
 
+<div class="row">
+  <div class="shrink columns">Lo que mide</div>
+  <div class="columns">Tomara todo el espacio restante</div>
+</div>
+
+
     {{!-- Pages you create in the src/pages/ folder are inserted here when the flattened page is created. --}}
     {{> body}}
 
