--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -15,6 +15,7 @@
 
 {{> header}}
 {{> navegacion}}
+{{> slider}}
 
     {{!-- Pages you create in the src/pages/ folder are inserted here when the flattened page is created. --}}
     {{> body}}
