--- a/src/partials/navegacion.html
+++ b/src/partials/navegacion.html
@@ -5,16 +5,13 @@
 <div class="title-bar-title">Menu</div>
     </div>
 
-    <nav class="row">
-<ul id="menu-principal" class="menu vertical expanded">
-    <li class="active"> <a href="#">Inicio</a>
-     <li> <a href="#">Nosotros</a>
-      <li> <a href="#">Diseños</a>
-       <li> <a href="#">Testimoniales</a>
-        <li> <a href="#">Envia tu diseño</a>
-
+<nav class="row">
+  <ul id="menu-principal" class="menu expanded">
+    <li class="active"><a href="#">Inicio</a></li>
+     <li><a href="#">Nosotros</a></li>
+      <li><a href="#">Diseños</a></li>
+       <li><a href="#">Testimoniales</a></li>
+        <li><a href="#">Envia tu diseño</a></li>
         </ul>
-
     </nav>
-
 </div>
