--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -50,8 +50,8 @@ $global-font-size: 100%;
 $global-width: rem-calc(1200);
 $global-lineheight: 1.5;
 $foundation-palette: (
-  primary: #1779ba,
-  secondary: #767676,
+  primary: #614dad,
+  secondary: #ffce00,
   success: #3adb76,
   warning: #ffae00,
   alert: #cc4b37,
@@ -411,9 +411,9 @@ $mediaobject-image-width-stacked: 100%;
 
 $menu-margin: 0;
 $menu-margin-nested: 1rem;
-$menu-item-padding: 0.7rem 1rem;
-$menu-item-color-active: $white;
-$menu-item-background-active: get-color(primary);
+$menu-item-padding: 1.3rem 1rem;
+$menu-item-color-active: $primary-color;
+$menu-item-background-active: get-color(secondary);
 $menu-icon-spacing: 0.25rem;
 $menu-item-background-hover: $light-gray;
 $menu-border: $light-gray;
