--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -35,3 +35,16 @@ div.navegacion-principal {
         }
     }
 }
+
+.responsive-menu {
+    padding: rem-calc(20 10);
+
+    .menu-icon {
+        //@include hamburger($color, $color-hover, $width, $height, $weight, $bars);
+    @include hamburger($secondary-color, $secondary-color, 35px, 30px, 5px, 3);
+    }
+    .title-bar-title {
+        color:$secondary-color;
+        margin-left: rem-calc(20);
+    }
+}
