--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -16,6 +16,7 @@
 {{> header}}
 {{> navegacion}}
 {{> slider}}
+{{> nosotros}}
 
     {{!-- Pages you create in the src/pages/ folder are inserted here when the flattened page is created. --}}
     {{> body}}
