--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -4,6 +4,7 @@ background: -moz-linear-gradient(top, rgba(187,108,209,0.7) 0%, rgba(65,114,183,
 background: -webkit-linear-gradient(top, rgba(187,108,209,0.7) 0%,rgba(65,114,183,0.7) 100%); /* Chrome10-25,Safari5.1-6 */
 background: linear-gradient(to bottom, rgba(187,108,209,0.7) 0%,rgba(65,114,183,0.7) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b3bb6cd1', endColorstr='#b34172b7',GradientType=0 ); /* IE6-9 */
+background-attachment: fixed;
 
 }
 
@@ -47,4 +48,9 @@ div.navegacion-principal {
         color:$secondary-color;
         margin-left: rem-calc(20);
     }
+}
+
+div.orbit {
+    padding: rem-calc(20);
+    background-color: $primary-color;
 }
