--- a/src/partials/nosotros.html
+++ b/src/partials/nosotros.html
@@ -1,21 +1,25 @@
 <div class="sobre-nosotros">
     <h2 class=text-center>Sobre nosotros</h2>
-    <div class="row text-center">
-        <div class="column">
+    <div class="row medium-unstack text-center">
+        <div class="small-6 column">
+            <i class="fi-checkbox"></i>
             <h3>Increible servicio</h3>
-            <P>猿はおむすびが食べたかったので無理やり。
+            <P>aaaaaaaaaaaaaaaaa
         </div>
-        <div class="column">
+        <div class="small-6 column">
+            <i class="fi-clock"></i>
             <h3>Gran rapidez</h3>
-            <P>猿はおむすびが食べたかったので無理やりにおむ
+            <P>bbbbbbbbbbbbbbbbbbbbbbbbb
         </div>
-        <div class="column">
+        <div class="small-6 column">
+            <i class="fi-css3"></i>
             <h3>Para devs</h3>
-            <P>猿はおむすびが食べたかったので無。
+            <P>ccccccccccccccccccccc
         </div>
-        <div class="column">
+        <div class="small-6 column">
+            <i class="fi-dollar"></i>
             <h3>Mejor precio</h3>
-            <P>猿はおむすびが食べたかったので無理やりにおむ。
+            <P>ddddddddddddddddddddddddd
         </div>
     </div>
 
