--- a/src/partials/navegacion.html
+++ b/src/partials/navegacion.html
@@ -1,12 +1,12 @@
 
 <div class="navegacion-principal">
-    <div class="responsive-menu" data-responsive-toggle="menu-principal" data-hide-for="medium">
+    <div class="responsive-menu" data-responsive-toggle="menu-principal" data-hide-for="large">
 <button class="menu-icon" type="button" data-toggle></button>
 <div class="title-bar-title">Menu</div>
     </div>
 
 <nav class="row">
-  <ul id="menu-principal" class="menu expanded">
+  <ul id="menu-principal" class="menu vertical expanded">
     <li class="active"><a href="#">Inicio</a></li>
      <li><a href="#">Nosotros</a></li>
       <li><a href="#">Diseños</a></li>
