--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -11,6 +11,9 @@ background-attachment: fixed;
 header {
     padding: rem-calc(50 0);
 }
+h1, h2, h3, h4, h5 {
+    text-transform: uppercase;
+}
 
 div.navegacion-principal {
     background-color: $primary-color;
@@ -53,4 +56,18 @@ div.navegacion-principal {
 div.orbit {
     padding: rem-calc(20);
     background-color: $primary-color;
+}
+
+div.sobre-nosotros {
+    margin-top: rem-calc(30);
+
+    i {
+        font-size: rem-calc(70);
+        margin: rem-calc(30 0);
+        display: block;
+    }
+h3 {
+    margin-bottom: rem-calc(20);
+    
+}
 }
