--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -18,6 +18,7 @@
 {{> navegacion}}
 {{> slider}}
 {{> nosotros}}
+{{> productos}}
 
     {{!-- Pages you create in the src/pages/ folder are inserted here when the flattened page is created. --}}
     {{> body}}
