--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -123,3 +123,24 @@ div.nuestros-productos {
         }
     }
 }
+
+.testimoniales {
+    margin-top: rem-calc(30);
+
+    .orbit {
+        background-color: $white;
+        border-radius: $global-radius;
+        margin-bottom: rem-calc(20);
+        @include breakpoint(medium) {
+            margin:0;
+        }
+        
+        blockquote {
+            font-size: rem-calc(22);
+        }
+
+        cite {
+            font-weight: $global-weight-bold;
+        }
+    }
+}
