--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -19,6 +19,7 @@
 {{> slider}}
 {{> nosotros}}
 {{> productos}}
+{{> testimoniales}}
 
     {{!-- Pages you create in the src/pages/ folder are inserted here when the flattened page is created. --}}
     {{> body}}
