--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -20,6 +20,7 @@
 {{> nosotros}}
 {{> productos}}
 {{> testimoniales}}
+{{> enviar}}
 
     {{!-- Pages you create in the src/pages/ folder are inserted here when the flattened page is created. --}}
     {{> body}}
