--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -21,6 +21,7 @@
 {{> productos}}
 {{> testimoniales}}
 {{> enviar}}
+{{> footer}}
 
     {{!-- Pages you create in the src/pages/ folder are inserted here when the flattened page is created. --}}
     {{> body}}
