--- a/src/partials/nosotros.html
+++ b/src/partials/nosotros.html
@@ -1,4 +1,4 @@
-<div class="sobre-nosotros">
+<div id="nosotros" class="sobre-nosotros" data-magellan-target="nosotros">
     <h2 class=text-center>Sobre nosotros</h2>
     <div class="row medium-unstack text-center">
         <div class="small-6 column">
