--- a/src/partials/slider.html
+++ b/src/partials/slider.html
@@ -1,4 +1,4 @@
-<div class="row ">
+<div id="slider" class="row" data-magellan-target="slider">
     <div class="column">
     <div class="orbit" role="region" aria-label="Ultimas promocines" data-orbit
     data-options="animInFromLeft:fade-in; animInFromRight:fade-in; animOutToLeft:fade-out; animOutToRight:fade-out;">
