--- a/src/partials/testimoniales.html
+++ b/src/partials/testimoniales.html
@@ -1,4 +1,4 @@
-<div class="testimoniales">
+<div id="testimoniales" class="testimoniales" data-magellan-target="testimoniales">
     <h2 class="text-center">Testimoniales</h2>
     <div class="row align-middle medium-unstack">
         <div class="column small-order-2 medium-order-1">
