--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -18,6 +18,14 @@ h1, h2, h3, h4, h5 {
 div.navegacion-principal {
     background-color: $primary-color;
     margin-bottom: rem-calc(20);
+    width:100%; 
+
+    &.fixed {
+        position: fixed;
+        left:0;
+        top:0;
+        z-index:100; 
+    }
 
 }
 
@@ -26,7 +34,6 @@ div.navegacion-principal {
         transition: all .3s ease;
         &:hover {
             background-color: $secondary-color;
-
             a {
                 color: $primary-color;
             }
@@ -36,6 +43,11 @@ div.navegacion-principal {
             text-transform: uppercase;
             font-weight: bold;
             color:$white;
+
+            &.active {
+                background-color: $secondary-color;
+                color:$primary-color;
+            }
         }
     }
 }
