--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header>
+<header id="inicio">
     <div class="row align-right">
         <div class="medium-4 columns text-center">
         <img src="assets/img/logo.svg">
