--- a/src/partials/navegacion.html
+++ b/src/partials/navegacion.html
@@ -1,5 +1,5 @@
 
-<div class="navegacion-principal">
+<div id="navegacion-principal" class="navegacion-principal">
     <div class="responsive-menu" data-responsive-toggle="menu-principal" data-hide-for="medium">
 <button class="menu-icon" type="button" data-toggle></button>
 <div class="title-bar-title">Menu</div>
@@ -7,11 +7,11 @@
 
 <nav class="row">
   <ul id="menu-principal" class="menu expanded">
-    <li class="active"><a href="#">Inicio</a></li>
-     <li><a href="#">Nosotros</a></li>
-      <li><a href="#">Diseños</a></li>
-       <li><a href="#">Testimoniales</a></li>
-        <li><a href="#">Envia tu diseño</a></li>
+    <li><a href="#inicio">Inicio</a></li>
+     <li><a href="#nosotros">Nosotros</a></li>
+      <li><a href="#productos">Diseños</a></li>
+       <li><a href="#testimoniales">Testimoniales</a></li>
+        <li><a href="#envia">Envia tu diseño</a></li>
         </ul>
     </nav>
 </div>
