--- a/src/partials/productos.html
+++ b/src/partials/productos.html
@@ -1,10 +1,10 @@
-<div class="row column">
+<div id="productos" class="row column" data-magellan-target="productos">
 <div class="nuestros-productos">
         <h2 class="text-center">Nuestros Diseños</h2>
 
         <div class="row">
         {{#each camisas}}
-        <div class="small-6 medium-4 columns">
+        <div class="small-12 medium-6 large-4 columns">
 
 <div class="camisa">
         <h4 class="text-center">{{this.nombre}}</h4>
